--- a/_posts/2024-01-23-xpath.md
+++ b/_posts/2024-01-23-xpath.md
@@ -43,40 +43,40 @@ XPath considera un documento XML como un árbol de nodos. En Informática, un á
 
 Un grafo es un conjunto de objetos llamados nodos o vértices unidos por enlaces llamados arcos o aristas.
 
-![Grafo](grafos-grafo.pdf){: width="400px"}
+![Grafo](grafos-grafo.svg){: width="400px"}
 _Grafo_
 
 Un grafo dirigido es un grafo en el que los arcos tienen dirección.
 
-![Grafo dirigido](grafos-grafo-dirigido.pdf){: width="400px"}
+![Grafo dirigido](grafos-grafo-dirigido.svg){: width="400px"}
 _Grafo dirigido_
 
 Cuando dos nodos están unidos por un arco con dirección, el nodo padre es el nodo del que parte el arco y el nodo hijo es el nodo al que llega el arco.
 
-![Nodo padre y nodo hijo](grafos-padre-hijo.pdf){: width="400px"}
+![Nodo padre y nodo hijo](grafos-padre-hijo.svg){: width="400px"}
 _Nodo padre y nodo hijo_
 
 Un árbol es un grafo en el que cualquier pareja de vértices están conectada por un único camino (es decir, que no hay ciclos). Un árbol dirigido es un árbol en el que las aristas tienen dirección y todos los nodos menos uno tienen un único padre.
 
-![Árbol](grafos-arbol.pdf){: width="400px"}
+![Árbol](grafos-arbol.svg){: width="400px"}
 _Árbol_
 
-![Árbol dirigido](grafos-arbol-dirigido.pdf){: width="400px"}
+![Árbol dirigido](grafos-arbol-dirigido.svg){: width="400px"}
 _Árbol dirigido_
 
 El nodo raíz de un árbol dirigido es el único nodo sin padre. Los nodos hermanos son los nodos que tienen el mismo padre.
 
-![Nodo raíz y nodos hermanos](grafos-raiz-hermanos.pdf){: width="400px"}
+![Nodo raíz y nodos hermanos](grafos-raiz-hermanos.svg){: width="400px"}
 _Nodo raíz y nodos hermanos_
 
 Los nodos descendientes de un nodo son todos los nodos a los que se llega desde el nodo: los hijos, los hijos de los hijos, etc.
 
-![Nodos descendientes](grafos-descendientes.pdf){: width="400px"}
+![Nodos descendientes](grafos-descendientes.svg){: width="400px"}
 _Nodos descendientes_
 
 Los nodos ascendientes de un nodo son todos los nodos de los que un nodo es descendiente: el padre, el padre del padre, etc.
 
-![Nodos ascendientes](grafos-ascendientes.pdf){: width="400px"}
+![Nodos ascendientes](grafos-ascendientes.svg){: width="400px"}
 _Nodos ascendientes_
 
 <details class="card mb-2">
@@ -130,7 +130,7 @@ Por ejemplo, el documento XML siguiente:
 
 Se puede representar mediante el siguiente grafo:
 
-![Árbol de documento XML](grafos-documento.pdf)
+![Árbol de documento XML](grafos-documento.svg)
 _Árbol de documento XML_
 
 Los nodos atributos y de texto no son como los nodos elemento. Por ejemplo, los nodos atributo y de texto no pueden tener descendientes. En realidad el nodo atributo ni siquiera se considera como hijo, sino como una etiqueta adosada al elemento. El texto contenido por una etiqueta sí que se considera hijo del elemento, aunque las expresiones XPath suelen trabajar con nodos elemento y para referirse a los atributos o al texto se utilizan notaciones especiales.
