--- a/_posts/2024-03-21-pandoc.md
+++ b/_posts/2024-03-21-pandoc.md
@@ -67,6 +67,7 @@ Dentro del contenedor de docker ejecutamos:
 ```console
 #apk update && apk add texlive-full
 #tlmgr install svg
+#tlmgr install adjustbox
 ```
 
 ```powershell
