--- a/_posts/2023-11-21-xml.md
+++ b/_posts/2023-11-21-xml.md
@@ -527,7 +527,7 @@ int main()
 En un navegador web se visualizará algo parecido a:
 
 ![Visualización del archivo ejemplo_cdata.xml](ejemplo_cdata_chrome.gif)
-_Visualización del archivo ejemplo_cdata.xml_
+_Visualización del archivo ejemplo\_cdata.xml_
 
 Dentro de una sección CDATA no se puede escribir la cadena `]]>`. En consecuencia, **no se pueden anidar secciones CDATA**.
 
