--- a/_posts/2024-03-21-pandoc.md
+++ b/_posts/2024-03-21-pandoc.md
@@ -65,9 +65,14 @@ $docker exec -it b9c2ae80ad7723523c71d532a0e3901f26dd0c67bba7273e65965b6ef8cc319
 Dentro del contenedor de docker ejecutamos:
 
 ```console
-#apk update && apk add texlive-full
 #tlmgr install svg
 #tlmgr install adjustbox
+```
+
+El siguiente comando no es necesario pero si recomendable:
+
+```console
+#apk update && apk add texlive-full
 ```
 
 ```powershell
@@ -110,8 +115,7 @@ foreach ($route in $routes) {
 listings: true
 shift-heading-level-by: -1
 number-sections: true
-resource-path: ["/data/assets/img/tarea-xsl"]
-template: "eisvogel2"
+template: "eisvogel2.latex"
 ```
 {: file="defaults.yaml" }
 
