--- a/_posts/2024-02-21-recetas.md
+++ b/_posts/2024-02-21-recetas.md
@@ -35,6 +35,7 @@ Este artículo es un compendio de recetas que he hecho que me han gustado.
 Tiempos y temperaturas:
 
 - 25 minutos a 200ºC. Modo "Aire caliente suave".
+- Si queremos que se gratine ponemos el gratinador los últimos 3 minutos.
 
 Lecciones aprendidas:
 
@@ -62,7 +63,7 @@ Ingredientes:
 - Merengue Suizo:
   - 5 claras de huevo.
   - 540 gramos de azúcar.
-  - Proporción merengue: 1 de claras por 1'5 de azucar.
+  - Proporción merengue: 1 de claras por 1'5 de azúcar.
   - 20 gr de zumo de limón
 
 Utensilios:
@@ -76,6 +77,20 @@ Tiempos y temperaturas:
   - Relleno: 150 C° por 25 - 30 minutos.
   - Merengue: Con el gratidanador o asador prendido (200 C°) por 5 - 8 minutos.
 
+## Merengue en mambo
+
+- 4 claras
+- Zumo de limón o vinagre
+- Sal
+- Azúcar
+
+Lecciones aprendidas:
+
+- La mambo tiene que estar limpia y seca.
+- Hay que poner todos los ingredientes.
+- 4 minutos a velocidad 4 con la mariposa.
+- La batidora a la mínima velocidad posible.
+
 ## Fideuá de Gandia con ali oli
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/eWkV0m9H4L0?si=0Dlk0XJidvo05aP6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -84,10 +99,11 @@ Ingredientes:
 
 - 400 gr de fideo gordo de 4mm.
 - Caldo de pescado.
-- 300 gr de calamar.
+- 300 gr de calamar limpio.
 - 8 gambones.
 - 2 cebollas.
 - Azafrán.
+- Lata de tomate.
 
 Ingredientes ali oli:
 
