--- a/_posts/2024-03-21-pandoc.md
+++ b/_posts/2024-03-21-pandoc.md
@@ -2,7 +2,7 @@
 title: "Pandoc"
 date: 2024-03-21 9:00:00 +0100
 categories: [General]
-tags: [pandoc, markdown, pdf, md, eisvogel, plantilla, docker, latex, lua, lualatex, plantilla, jekyll]
+tags: [pandoc, markdown, pdf, md, eisvogel, plantilla, docker, latex, plantilla, jekyll]
 img_path: /assets/img/pandoc/
 ---
 
@@ -34,7 +34,7 @@ Ejemplo:
 docker run pandoc/extra
 ```
 
-## De Markdown para Jekyll a documentos PDF
+## De Markdown para Jekyll a PDF
 
 Con el siguiente comando y los siguientes ficheros de configuración me genero este [PDF](/assets/img/pandoc/2024-03-01-tarea-xsl.pdf) a mi gusto:
 
@@ -47,7 +47,7 @@ $docker run -d -it --volume "D:\GitHub\marcosruiz.github.io:/data" `
 --restart=no --runtime=runc pandoc/extra
 ```
 
-Para portatil, creamos el contenedor de Docker:
+Para portátil, creamos el contenedor de Docker:
 
 ```console
 $docker run -d -it --volume "C:\Users\marco\Documents\GitHub\marcosruiz.github.io:/data" `
@@ -69,24 +69,87 @@ Dentro del contenedor de docker ejecutamos:
 #tlmgr install adjustbox
 ```
 
-El siguiente comando no es necesario pero si recomendable:
+El siguiente comando no es necesario:
 
 ```console
 #apk update && apk add texlive-full
 ```
 
 ```powershell
-# Para PC torre
-$githubProjectFolder = "D:\GitHub\marcosruiz.github.io"
-$templateFolder = "C:\Users\marco\MEGA\CURSO 23 24\Plantillas\Eisvogel"
+# Script de powershell para generar documentos PDF
+# Este fichero debe ejecutarse en la raiz del proyecto ya que usa rutas relativas en las variables:
+# $githubProjectFolder = "."
 
-# Para portatil
-$githubProjectFolder = "C:\Users\marco\Documents\GitHub\marcosruiz.github.io"
-$templateFolder = "C:\Users\marco\Documents\MEGA\CURSO 23 24\Plantillas\Eisvogel"
+# 
+# Función para quitar todo lo que tenga que ver con mi web y de problemas a la hora de generar los PDFs.
+# 
+function generarTemporal {
+  param(
+    [string]$fileRoute,
+    [string]$tempFileRoute
+  )
 
-$routes = "css", "dtd", "espacios-de-nombres-xml", "html", "introduccion-lenguajes-marcas", "markdown", "practica-css-codepip", "practica-css-freecodecamp", "practica-css-w3schools", "practica-html", "practica-html-freecodecamp", "practica-html-w3schools", "representacion-informacion", "sindicacion-contenidos", "sistemas-gestion-empresarial", "tarea-calculadora-html-css", "tarea-dtd", "tarea-formato-svg", "tarea-introduccion-odoo", "tarea-introduccion-xpath", "tarea-introduccion-xml", "tarea-introduccion-xquery", "tarea-rss", "tarea-xsd", "tarea-xsl", "xml", "xpath", "xquery", "xsl", "xslfo", "xslt"
+  # Leer el contenido del archivo
+  $contenido = Get-Content -Path $fileRoute
 
-$routes = "sindicacion-contenidos"
+  # Definir los patrones de sustitución
+  $patrones = @{'^\{\s*:\s*\.section\s*\}$'                        = ''
+    '^\{\s*:\s*\.subsection\s*\}$'                                 = ''
+    '^\{\s*:\s*\.subsubsection\s*\}$'                              = ''
+    '^\{\s*:\s*\.activity\s*\}$'                                   = ''
+    '^\{\s*:\s*\.prompt-.*\s*\}$'                                  = ''
+    '^\{\s*:\s*\.question\s*\}'                                    = '**Pregunta:** '
+    '(<summary class="card-header question">)'                     = '$1**Pregunta:** '
+    '\{\s*:\s*\.filepath\s*\}'                                     = ''
+    '🥳'                                                           = ''
+    '📸'                                                           = ''
+    '📷'                                                           = ''
+    "👏"                                                           = ''
+    '😮'                                                           = ''
+    '🔥'                                                           = ''
+    '🔝'                                                           = ''
+    '🙌'                                                           = ''
+    "👌"                                                           = ''
+    "🧠"                                                           = ''
+    "👀"                                                           = ''
+    "💳"                                                           = ''
+    "💸"                                                           = ''
+    "👱"                                                           = ''
+    '得'                                                            = ':imagínate un caracter chino aquí:'
+    '取'                                                            = ':imagínate un caracter chino aquí:'
+    '𐐝'                                                           = ':imagínate un caracter raro aquí:'
+    'д'                                                            = ':imagínate un caracter cirílico aquí:'
+    'Ж'                                                            = ':imagínate un caracter cirílico aquí:'
+    '\{\s*:\s*file="([^"]+)"\s*\}$'                                = '_Fichero: `$1`_'
+    '<iframe [^>]* src="([^"]*)[^>]* title="YouTube video player"' = 'Vídeo: $1'
+    '^_.*_$'                                                       = ''
+    '(\{\s*):(\s*width=.*\})'                                      = '$1$2'
+  }
+
+  # Iterar sobre el contenido y modificar las líneas que coincidan con los patrones
+  foreach ($patron in $patrones.Keys) {
+    $contenido = $contenido -replace $patron, $patrones[$patron]
+  }
+
+  # Escribir el contenido filtrado de vuelta a un archivo temporal
+  $contenido | Set-Content -Path $tempFileRoute
+
+}
+
+# Aquí empieza el script
+
+$githubProjectFolder = "."
+
+# TODO: debemos definir la variable $routes con el nombre de las rutas que queremos convertir
+
+# Temas LMSGI
+# $routes = "css", "dtd", "espacios-de-nombres-xml", "html", "introduccion-lenguajes-marcas", "markdown", "practica-css-codepip", "practica-css-freecodecamp", "representacion-informacion", "sindicacion-contenidos", "sistemas-gestion-empresarial", "xml", "xpath", "xquery", "xsl", "xslfo", "xslt"
+
+# Temas NC
+# $routes = "legislacion-proteccion-datos", "normativa-nacional-internacional", "esquema-nacional-seguridad", "directiva-nis",  "cumplimiento-normativo", "sistemas-gestion-cumplimiento", "tipos-normas-clasificacion", "legislacion-cumplimiento-penal", "conceptos-basicos-seguridad-informatica"
+
+# Temas SAA
+# $routes = "redes-neuronales-deep-learning", "casos-practicos-sobre-aprendizaje-automatico", "introduccion-aprendizaje-automatico", "algoritmos-aprendizaje-automatico", "aprendizaje-supervisado", "aprendizaje-no-supervisado"
 
 # Iterar sobre cada patron de archivo
 foreach ($route in $routes) {
@@ -96,26 +159,32 @@ foreach ($route in $routes) {
   $files = Get-ChildItem "$githubProjectFolder\_posts" | Where-Object { $_.Name -match $pattern }
 
   $file = $files[0]
+  $fileRoute = "$($githubProjectFolder)\_posts\$($file.Name)"
+  $tempFileRoute = "$($githubProjectFolder)\tmp\$($file.Name)"
+
+  generarTemporal -fileRoute $fileRoute -tempFileRoute $tempFileRoute
 
   $resourcePath = "/data/assets/img/" + $route
 
-  docker exec aaa230b91f7592b6f2e74372eccfc2038caf5c5ebc16865aea3d9ab11ef8923d pandoc "/data/_posts/$($file.Name)" `
+  # Recuerda cambiar el ID del contentedor por el que corresponda
+  docker exec aaa230b91f7592b6f2e74372eccfc2038caf5c5ebc16865aea3d9ab11ef8923d pandoc "/data/tmp/$($file.Name)" `
     -o "/data/pdf/$($route).pdf" `
     --metadata-file /data/pandoc/metadata.yaml `
     --defaults /data/pandoc/defaults.yaml `
     --resource-path $resourcePath `
-    --from markdown `
-    --lua-filter /data/pandoc/filter.lua
+    --from markdown
 
 }
 ```
-{: file="exportarLmsgiAPdf.ps1" }
+{: file="exportarMdAPdf.ps1" }
+
+También necesitamos los siguientes ficheros de configuración para simplificar el comando de pandoc:
 
 ```yaml
 listings: true
 shift-heading-level-by: -1
 number-sections: true
-template: "eisvogel2.latex"
+template: "eisvogel"
 ```
 {: file="defaults.yaml" }
 
@@ -128,193 +197,15 @@ lang: es-ES
 ```
 {: file="metadata.yaml" }
 
-En mi caso, añado las siguientes clases CSS personalizadas:
-
-- `section`
-- `subsection`
-- `subsubsection`
-- `question`
-
-Además por usar el [tema Chirpy](https://chirpy.cotes.page/) el cual usa las siguientes clases:
-
-- `filepath`
-- `prompt-tip`
-- `prompt-info`
-- `prompt-warning`
-- `prompt-danger`
-- `file` con la información del nombre del fichero.
-
-Es por esto que necesito los siguientes filtros Lua:
-
-```lua
--- Filtro para clase activity
-function ParaActivity(el)
-  -- Si el elemento es un párrafo y contiene "{:.activity}", lo convertimos en un encabezado
-  if el.tag == "Para" then
-    local content = pandoc.utils.stringify(el)
-    -- Si el párrafo contiene "{:.activity}", lo convertimos en un encabezado de nivel 2
-    if content:find("{:%.activity}") then
-      -- Reemplazamos "{:.activity}" con una cadena vacía
-      content = content:gsub("{:%.activity} ###", "")
-      -- Creamos un nuevo elemento de encabezado con el contenido modificado
-      return pandoc.Header(2, content)
-    end
-    return el
-  end
-  -- Devolvemos el elemento sin cambios si no es un párrafo
-  return el
-end
-
--- Filtro para clase section
-function ParaSection(el)
-  -- Si el elemento es un párrafo y contiene "{:.section}", lo convertimos en un encabezado
-  if el.tag == "Para" then
-    local content = pandoc.utils.stringify(el)
-    -- Si el párrafo contiene "{:.section}", lo convertimos en un encabezado de nivel 2
-    if content:find("{:%.section}") then
-      -- Reemplazamos "{:.section}" con una cadena vacía
-      content = content:gsub("{:%.section} ##", "")
-      -- Creamos un nuevo elemento de encabezado con el contenido modificado
-      return pandoc.Header(1, content)
-    end
-    return el
-  end
-  -- Devolvemos el elemento sin cambios si no es un párrafo
-  return el
-end
-
--- Filtro para clase subsection
-function ParaSubsection(el)
-  -- Si el elemento es un párrafo y contiene "{:.subsection}", lo convertimos en un encabezado
-  if el.tag == "Para" then
-    local content = pandoc.utils.stringify(el)
-    -- Si el párrafo contiene "{:.subsection}", lo convertimos en un encabezado de nivel 2
-    if content:find("{:%.subsection}") then
-      -- Reemplazamos "{:.subsection}" con una cadena vacía
-      content = content:gsub("{:%.subsection} ###", "")
-      -- Creamos un nuevo elemento de encabezado con el contenido modificado
-      return pandoc.Header(2, content)
-    end
-    return el
-  end
-  -- Devolvemos el elemento sin cambios si no es un párrafo
-  return el
-end
-
--- Filtro para clase subsubsection
-function ParaSubsubsection(el)
-  -- Si el elemento es un párrafo y contiene "{:.subsubsection}", lo convertimos en un encabezado
-  if el.tag == "Para" then
-    local content = pandoc.utils.stringify(el)
-    -- Si el párrafo contiene "{:.subsubsection}", lo convertimos en un encabezado de nivel 2
-    if content:find("{:%.subsubsection}") then
-      -- Reemplazamos "{:.subsubsection}" con una cadena vacía
-      content = content:gsub("{:%.subsubsection} ####", "")
-      -- Creamos un nuevo elemento de encabezado con el contenido modificado
-      return pandoc.Header(3, content)
-    end
-    return el
-  end
-  -- Devolvemos el elemento sin cambios si no es un párrafo
-  return el
-end
-
--- Filtro para clase prompt-info, prompt-tip, prompt-warning, prompt-danger
-function RemovePrompts(el)
-  -- Si el elemento es un párrafo y contiene "{:.prompt-.*}", lo convertimos en un encabezado
-  if el.tag == "Para" then
-    local content = pandoc.utils.stringify(el)
-    -- Si el párrafo contiene "{:.prompt-.*}", lo convertimos en un encabezado de nivel 2
-    if content:find("{:%s?%.prompt%-.+}") then
-      -- Reemplazamos "{:.prompt-.*}" con una cadena vacía
-      content = content:gsub("{:%s?%.prompt%-.+}", "")
-      -- Creamos un nuevo elemento de encabezado con el contenido modificado
-      return pandoc.Para(content)
-    end
-    return el
-  end
-  -- Devolvemos el elemento sin cambios si no es un párrafo
-  return el
-end
-
--- Filtro para clase filepath
-function RemoveFilepaths(el)
-  -- Si el elemento es un párrafo y contiene "{:.filepath}", lo convertimos en un encabezado
-  if el.tag == "Para" then
-    local content = pandoc.utils.stringify(el)
-    -- Si el párrafo contiene "{:.filepath}", lo convertimos en un encabezado de nivel 2
-    if content:find("{:%s?%.filepath}") then
-      -- Reemplazamos "{:.filepath}" con una cadena vacía
-      content = content:gsub("{:%s?%.filepath}", "")
-      -- Creamos un nuevo elemento de encabezado con el contenido modificado
-      return pandoc.Para(content)
-    end
-    return el
-  end
-  -- Devolvemos el elemento sin cambios si no es un párrafo
-  return el
-end
-
--- Filtro para los nombres de los ficheros
-function ExtractFilePath(el)
-  -- Si el elemento es un párrafo
-  if el.tag == "Para" then
-    local content = pandoc.utils.stringify(el)
-    -- Buscamos los párrafos que empiezan por "{: file=\"" y terminan con "\" }"
-    local filepath = content:match("{:%s?file=“(.-)”%s?}")
-    -- Si encontramos un filepath, devolvemos un nuevo párrafo con el filepath como contenido
-    if filepath then
-      return pandoc.Para("Fichero: " .. filepath)
-    end
-  end
-  -- Devolvemos el elemento sin cambios si no es un párrafo que cumple con el patrón
-  return el
-end
-
-function removeEmojis(el)
-  if el.tag == "Str" then
-    local content = pandoc.utils.stringify(el)
-    local palabras = {"🥳", "📸", "👏", "😮", "🔥", "🔝", "🙌", "👌", "取", "得", "𐐝"}
-    -- Recorrer la array
-    for i, palabra in ipairs(palabras) do
-      content = content:gsub(palabra, "")
-    end
-    return pandoc.Str(content)
-  end
-  return el
-end
-
-function removeCyrilic(el)
-  if el.tag == "Str" then
-    local content = pandoc.utils.stringify(el)
-    local patron = "[дЖ]"
-    content = content:gsub(patron, "")
-    return pandoc.Str(content)
-  end
-  return el
-end
-
-return {
-  {Para = ParaActivity},
-  {Para = ParaSection},
-  {Para = ParaSubsection},
-  {Para = ParaSubsubsection},
-  {Para = RemovePrompts},
-  {Para = RemoveFilepaths},
-  {Para = ExtractFilePath},
-  {Str = removeEmojis},
-  {Str = removeCyrilic}
-}
-```
-{: file="filter.lua" }
-
-## De documentos Markdown para Notion a documentos PDF
+## De Markdown para Notion a PDF
 
 Con Markdown sería mucho más sencillo de generar:
 
 ```console
-$githubProjectFolder = "C:\Users\marco\Documents\GitHub\marcosruiz.github.io"
-$templatesFolder = "C:\Users\marco\Documents\MEGA\CURSO 23 24\Plantillas\Eisvogel"
+# Ejecutar en la raíz del proyecto
+$githubProjectFolder = "./"
+$templatesFolder = "./pandoc/templates/"
+
 docker run --rm --volume "$githubProjectFolder:/data" `
 --volume "%templatesFolder:/root/.pandoc/templates" `
 pandoc/extra /data/_posts/2024-03-01-tarea-xsl.md -o /data/pdf/2024-03-01-tarea-xsl.pdf `
@@ -325,7 +216,7 @@ pandoc/extra /data/_posts/2024-03-01-tarea-xsl.md -o /data/pdf/2024-03-01-tarea-
 ```yaml
 listings: true
 number-sections: true
-template: "eisvogel2"
+template: "eisvogel"
 ```
 {: file="defaults.yaml" }
 
@@ -401,8 +292,23 @@ for ($i = 0; $i -lt $titles.Count; $i++) {
 ```
 {: file="docxToMd.ps1" }
 
-> Si copias este texto en un fichero `.ps1` deberá ser en codificación Windows 1252.
+> Si copias este texto en un fichero `.ps1` y te da problemas prueba la codificación Windows 1252.
 {:.prompt-warning}
+
+## De HTML a PDF
+
+Ejemplo:
+
+```powershell
+docker run --rm --volume "C:\Users\marco\MEGA\CURSO 23 24\LMSGI\Contenidos\TeoriaHTML:/data" `
+  --volume "C:\Users\marco\MEGA\CURSO 23 24\Plantillas\Eisvogel:/root/.pandoc/templates" `
+  --name pruebaHTML `
+  pandoc/extra "LMSGI01 - DAM - Lenguajes de marcas y sistemas de gestión de información - UT1.- Reconocimiento de las características de lenguajes de marcas..html" `
+  -o "pruebaHtml.pdf" --template eisvogel --listings `
+  --metadata-file /data/metadata.yaml `
+  --defaults /data/defaults.yaml 
+```
+{: file="exportarHtmlAPdf.ps1" }
 
 ## Alternativas a Jekyll
 
