--- a/_posts/2024-03-21-pandoc.md
+++ b/_posts/2024-03-21-pandoc.md
@@ -213,12 +213,16 @@ pandoc/extra /data/_posts/2024-03-01-tarea-xsl.md -o /data/pdf/2024-03-01-tarea-
 --defaults /data/pandoc/defaults.yaml
 ```
 
+Parámetros de la instrucción `pandoc` en un documento separado:
+
 ```yaml
 listings: true
 number-sections: true
 template: "eisvogel"
 ```
 {: file="defaults.yaml" }
+
+Fichero de metadatos en un documento separado:
 
 ```yaml
 author: [Marcos Ruiz García]
@@ -228,6 +232,45 @@ toc: true
 lang: es-ES
 ```
 {: file="metadata.yaml" }
+
+## De Markdown a PDF
+
+Plantilla para tareas:
+
+```powershell
+docker run --rm --volume ".:/data" `
+  pandoc/extra `
+  <nombreDelFicheroDeEntrada>.md `
+  -o <nombreDelFicheroDeSalida>.pdf `
+  -f markdown `
+  --template "https://raw.githubusercontent.com/Wandmalfarbe/pandoc-latex-template/v2.4.0/eisvogel.tex" `
+  --listings `
+  --shift-heading-level-by "-1" `
+  --number-sections false
+```
+
+En documento de markdown de entrada tiene los siguientes metadatos:
+
+```md
+---
+title: "Nombre de la tarea"
+subtitle: "Nombre de la asignatura\n\nNombre del ciclo formativo"
+author: [Marcos Ruiz García]
+date: "16/04/2024"
+keywords: [Bla, blabla]
+toc-own-page: true
+titlepage: true
+toc-own-page: true
+toc: true
+lang: es-ES
+caption-justification: centering
+...
+
+## Bla bla bla
+
+Bla bla bla
+
+```
 
 ## De Docx a Markdown
 
