--- a/_posts/2024-03-01-tarea-xsl.md
+++ b/_posts/2024-03-01-tarea-xsl.md
@@ -130,6 +130,7 @@ Dado el siguiente documento XML, escriba las hojas de estilo XSLT que devuelvan 
   </ciclos>
 </ies>
 ```
+{: file="ciclosFormativos1.xml" }
 
 > No es importante si en el resultado se generan líneas en blanco a lo largo del documento.
 {:.prompt-info}
@@ -140,8 +141,9 @@ Sin etiquetas:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?> 
-Administración de Sistemas Informáticos en Red Desarrollo de
-Aplicaciones Web Sistemas Microinformáticos y Redes
+Administración de Sistemas Informáticos en Red 
+Desarrollo de Aplicaciones Web 
+Sistemas Microinformáticos y Redes
 ```
 
 #### Actividad 1-2
@@ -220,6 +222,7 @@ Dado el siguiente documento XML, escriba las hojas de estilo XSLT que devuelvan 
   </ciclos>
 </ies>
 ```
+{: file="ciclosFormativos2.xml" }
 
 #### Actividad 2-1
 
@@ -741,12 +744,124 @@ Y este código:
 
 Transforma el documento en formato Markdown que has entregado en la [Tarea: Introducción a XPath](/posts/tarea-introduccion-xpath/) realiza las siguientes acciones:
 
-1. Exporta el documento a formato HTML.
-1. Transformar el documento HTML a formato XSL-FO con un XSLT.
-1. Transforma el documento XSL-FO a PDF.
+1. Exporta el documento a formato HTML (mejor si es XHTML).
+1. Transformar el documento HTML a formato XSL-FO con un XSLT. Se recomienda usar Saxon HE.
+1. Transforma el documento XSL-FO a PDF. Se recomienda usar Apache FOP.
 
 ![Proceso transformación de MD a PDF](procesoXSLTXSLFO.png)
 _Proceso transformación de MD a PDF_
+
+> Puedes basarte en alguno de los siguientes ejemplos pero deberás añadir casos para interpretar listas, bloques de código o cambiar los estilos de los diferentes bloques.
+{:.prompt-warning}
+
+Ejemplo de XSLT que genera un XSL-FO válido:
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<xsl:stylesheet version="1.0"
+  xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
+  <xsl:template match="/html/body">
+
+    <fo:root xmlns:fo="http://www.w3.org/1999/XSL/Format">
+
+      <fo:layout-master-set>
+        <fo:simple-page-master master-name="simple" page-height="29.7cm" page-width="21cm" margin-top="1cm" margin-bottom="2cm" margin-left="2.5cm" margin-right="2.5cm">
+          <fo:region-body margin-top="3cm" />
+          <fo:region-before extent="3cm" />
+          <fo:region-after extent="1.5cm" />
+        </fo:simple-page-master>
+      </fo:layout-master-set>
+
+      <fo:page-sequence master-reference="simple">
+        <fo:flow flow-name="xsl-region-body">
+
+          <fo:block font-size="24pt" font-family="sans-serif" line-height="24pt" space-after.optimum="15pt" text-align="center" padding-top="3pt">
+            <xsl:value-of select="h1"/>
+          </fo:block>
+
+          <xsl:for-each select="h2|p">
+
+            <xsl:if test="name() =  'h2'">
+              <fo:block font-size="18pt" font-family="sans-serif" line-height="24pt" space-after.optimum="15pt" text-align="left" padding-top="3pt">
+                <xsl:value-of select="."/>
+              </fo:block>
+            </xsl:if>
+
+            <xsl:if test="name() =  'p'">
+              <fo:block font-size="12pt" font-family="sans-serif" line-height="18pt" space-after.optimum="15pt" text-align="left" padding-top="3pt">
+                <xsl:value-of select="."/>
+              </fo:block>
+            </xsl:if>
+
+          </xsl:for-each>
+
+        </fo:flow>
+      </fo:page-sequence>
+    </fo:root>
+
+  </xsl:template>
+</xsl:stylesheet>
+```
+
+Ejemplo de XSLT que genera un XSL-FO válido usando varias templates y el elemento `<xsl:apply-templates>`:
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<xsl:stylesheet version="1.0"
+  xmlns:xsl="http://www.w3.org/1999/XSL/Transform" 
+  xmlns:fo="http://www.w3.org/1999/XSL/Format">
+  <xsl:template match="/html/body">
+  
+  <fo:root xmlns:fo="http://www.w3.org/1999/XSL/Format">
+  
+  <fo:layout-master-set>
+    <fo:simple-page-master master-name="simple" page-height="29.7cm" page-width="21cm" margin-top="1cm" margin-bottom="2cm" margin-left="2.5cm" margin-right="2.5cm">
+      <fo:region-body margin-top="3cm" />
+      <fo:region-before extent="3cm" />
+      <fo:region-after extent="1.5cm" />
+    </fo:simple-page-master>
+      </fo:layout-master-set>
+
+      <fo:page-sequence master-reference="simple">
+        <fo:flow flow-name="xsl-region-body">
+          
+          <fo:block font-size="24pt" font-family="sans-serif" line-height="24pt" space-after.optimum="15pt" text-align="center" padding-top="3pt">
+            <xsl:value-of select="h1"/>
+          </fo:block>
+
+          <xsl:apply-templates select="h2|p"/>
+          
+        </fo:flow>
+      </fo:page-sequence>
+    </fo:root>
+  </xsl:template>
+
+  <xsl:template match="h2">
+    <fo:block font-size="18pt" font-family="sans-serif" line-height="24pt" space-after.optimum="15pt" text-align="left" padding-top="3pt">
+      <xsl:value-of select="."/>
+    </fo:block>
+  </xsl:template>
+
+  <xsl:template match="p">
+    <fo:block font-size="12pt" font-family="sans-serif" line-height="18pt" space-after.optimum="15pt" text-align="left" padding-top="3pt">
+      <xsl:value-of select="."/>
+    </fo:block>
+  </xsl:template>
+  
+</xsl:stylesheet>
+```
+
+En mi caso he usado el siguiente comando para crear el XSL-FO:
+
+```powershell
+java -jar "C:\Program Files\SaxonHE12-4J\saxon-he-12.4.jar" -xsl:03_xslt_simplificado.xsl -s:02_real.html -o:04_xslfo.xsl
+```
+
+Y el siguiente comando para crear el PDF:
+
+```powershell
+fop.bat -fo 04_xslfo.xsl -pdf 05_pdf.pdf
+```
 
 ## Bibliografía
 
