--- a/_posts/2024-03-21-pandoc.md
+++ b/_posts/2024-03-21-pandoc.md
@@ -286,6 +286,18 @@ pandoc/extra --extract-media='./' `
 Ejemplo de uso:
 
 ```powershell
+docker run --rm --volume ".:/data" `
+  pandoc/extra --extract-media='./' `
+  "/data/01-mruizg-Representación y comunicación de la información.docx" `
+  --wrap=none `
+  --to=markdown `
+  --from=docx `
+  --output "/data/01-mruizg-Representación y comunicación de la información.md"
+```
+
+Ejemplo de uso:
+
+```powershell
 $temasPropiosFolder = "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\"
 $creator = "mruizg"
 
@@ -330,7 +342,10 @@ for ($i = 0; $i -lt $titles.Count; $i++) {
     pandoc/extra --extract-media='./' `
     "/data/$file.docx" `
     --wrap=none `
-    -o "/data/$file.md"
+    --to=markdown `
+    --from=docx `
+    --table-of-contents=false `
+    --output "/data/$file.md"
 }
 ```
 {: file="docxToMd.ps1" }
