--- a/_posts/2024-03-21-pandoc.md
+++ b/_posts/2024-03-21-pandoc.md
@@ -368,6 +368,10 @@ docker run --rm --volume "C:\Users\marco\MEGA\CURSO 23 24\LMSGI\Contenidos\Teori
 ```
 {: file="exportarHtmlAPdf.ps1" }
 
+## De PDF a Markdown
+
+No se puede.
+
 ## Alternativas a Jekyll
 
 Actualmente estoy usando para esta web [Jekyll](https://jekyllrb.com/) con el [tema Chirpy](https://github.com/cotes2020/jekyll-theme-chirpy) pero existen alternativas:
