--- a/_posts/2024-03-21-pandoc.md
+++ b/_posts/2024-03-21-pandoc.md
@@ -1,5 +1,5 @@
 ---
-title: "Pandoc"
+title: "Tutorial: Pandoc"
 date: 2024-03-21 9:00:00 +0100
 categories: [General]
 tags: [pandoc, markdown, pdf, md, eisvogel, plantilla, docker, latex, plantilla, jekyll]
