--- a/_posts/2024-02-12-xslt.md
+++ b/_posts/2024-02-12-xslt.md
@@ -61,6 +61,9 @@ Si quieres saber como instalar Saxon-HE puedes leer el apartado [Instalación de
 
 También se puede usar XML Copy Editor como se puede ver en el apartado "Aplicar una transformación XSLT" del artículo [XML Copy Editor](https://www.mclibre.org/consultar/xml/otros/xmlcopyeditor.html).
 
+> Quizás necesites configurar variables de entorno en este proceso. Si quieres saber que son las variables de entorno y como se configuran, lee el artículo [Tutorial: La variable de entorno Path](/posts/variable-entorno-path)
+{:.prompt-info}
+
 {:.section}
 ## Hojas de estilo XSLT
 
