--- a/_posts/2024-02-13-xslfo.md
+++ b/_posts/2024-02-13-xslfo.md
@@ -385,6 +385,9 @@ Se recomienda usar [Apache™ FOP](https://xmlgraphics.apache.org/fop/download.h
 
 En GNU/Linux con variables de entorno configuradas:
 
+> Si quieres saber que son las variables de entorno y como se configuran, lee el artículo [Tutorial: La variable de entorno Path](/posts/variable-entorno-path)
+{:.prompt-info}
+
 ```console
 $fop -fo <docExistente.fo> -pdf <docGenerado.pdf>
 ```
