--- a/_posts/2024-03-01-tarea-xsl.md
+++ b/_posts/2024-03-01-tarea-xsl.md
@@ -863,6 +863,9 @@ Y el siguiente comando para crear el PDF:
 fop.bat -fo 04_xslfo.xsl -pdf 05_pdf.pdf
 ```
 
+> Si quieres saber que son las variables de entorno y como se configuran, lee el artículo [Tutorial: La variable de entorno Path](/posts/variable-entorno-path)
+{:.prompt-info}
+
 ## Bibliografía
 
 - <https://www.mclibre.org/consultar/xml/ejercicios/xslt-1.html>
