añado más comandos de xslfo

--- a/_posts/2024-02-13-xslfo.md
+++ b/_posts/2024-02-13-xslfo.md
@@ -388,6 +388,9 @@ En GNU/Linux con variables de entorno configuradas:
 > Si quieres saber que son las variables de entorno y como se configuran, lee el artículo [Tutorial: La variable de entorno Path](/posts/variable-entorno-path)
 {:.prompt-info}
 
+> Si no tenemos las variables de entorno configuradas el ejecutable `fop`{: .filepath} o `fop.bat`{: .filepath} deberá estar en la misma carpeta donde esté `<docExistente.fo>`.
+{:.prompt-info}
+
 ```console
 $fop -fo <docExistente.fo> -pdf <docGenerado.pdf>
 ```
@@ -398,14 +401,17 @@ En GNU/Linux sin variables de entorno configuradas:
 $./fop -fo <docExistente.fo> -pdf <docGenerado.pdf>
 ```
 
-En Windows sin variables de entorno configuradas:
+En Windows con variables de entorno configuradas:
 
 ```powershell
-$./fop.bat -fo <docExistente.fo> -pdf <docGenerado.pdf>
+fop.bat -fo <docExistente.fo> -pdf <docGenerado.pdf>
 ```
 
-> Si no tenemos las variables de entorno configuradas el ejecutable `fop`{: .filepath} o `fop.bat`{: .filepath} deberá estar en la misma carpeta donde esté `<docExistente.fo>`.
-{:.prompt-info}
+En Windows sin variables de entorno configuradas :
+
+```powershell
+./fop.bat -fo <docExistente.fo> -pdf <docGenerado.pdf>
+```
 
 {:.section}
 ## XSLT + XSL-FO
@@ -417,6 +423,24 @@ _Funcionamiento de XSLT y XLS-FO en secuencia_
 
 - Con el procesador XSLT generamos un fichero XSL-FO.
 - El fichero XSL-FO es procesado por el procesador XSL-FO generando un documento que puede ser leído cómodamente por una persona.
+
+Utilizaríamos un comando para generar el XLS-FO de los datos XML:
+
+```console
+java -jar "C:\Program Files\SaxonHE12-4J\saxon-he-12.4.jar" -xsl:xslt.xsl -s:datos.xml -o:xslfo.xsl
+```
+
+Para luego generar el PDF con Apache FOP:
+
+```console
+fop.bat -fo xslfo.xsl -pdf pdf.pdf
+```
+
+Estos dos pasos se pueden condensar en uno de la siguiente manera:
+
+```console
+fop -xml datos.xml -xsl xslt.xsl -pdf pdf.pdf
+```
 
 ## Bibliografía
 
