--- a/_posts/2024-03-01-tarea-xsl.md
+++ b/_posts/2024-03-01-tarea-xsl.md
@@ -744,7 +744,7 @@ Y este código:
 
 Transforma el documento en formato Markdown que has entregado en la [Tarea: Introducción a XPath](/posts/tarea-introduccion-xpath/) realiza las siguientes acciones:
 
-1. Exporta el documento a formato HTML (mejor si es XHTML).
+1. Exporta el documento a formato HTML (mejor si es XHTML). Puedes usar la web de [codebeautify](https://codebeautify.org/markdown-to-html) o cualquier otra.
 1. Transformar el documento HTML a formato XSL-FO con un XSLT. Se recomienda usar Saxon HE.
 1. Transforma el documento XSL-FO a PDF. Se recomienda usar Apache FOP.
 
