--- a/_posts/2024-01-22-xsl.md
+++ b/_posts/2024-01-22-xsl.md
@@ -25,6 +25,16 @@ _Esquema general de XSL_
 {:.prompt-info}
 
 {:.section}
+## ¿Esto se usa?
+
+- Las consultas XPath se usan mucho para testing automático.
+- El concepto de las plantillas XSLT es similar al de las plantillas de Angular y React.
+- La generación de documentos/informes dada una base de datos XML se puede hacer con XSL-FO.
+
+![Oferta de trabajo](ofertaTrabajo.png)
+_Oferta de trabajo_
+
+{:.section}
 ## ¿Qué es XPath?
 
 Lee el artículo [¿Qué es XPath?](/posts/xpath/)
@@ -42,3 +52,4 @@ Lee el artículo [¿Qué es XSL-FO?](/posts/xslfo/)
 ## Bibliografía
 
 - <https://es.wikipedia.org/wiki/Extensible_Stylesheet_Language>
+- Rodrigo Jesús Mulero
