--- a/_posts/2024-02-21-recetas.md
+++ b/_posts/2024-02-21-recetas.md
@@ -168,18 +168,18 @@ Ingredientes:
 - 100 gr por persona es la ración (media taza).
 - 50 gr por persona cuando el arroz es para acompañar.
 
-## Pizza
+## Masa de pizza
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/JBHI784AQkA?si=47lLTMhjmI0oMUJP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+Ingredientes:
 
-Ingredientes para la masa:
-
-- 400 gr de harina de trigo.
-- 50 grm de harina de maíz.
-- 50 gr de aceite de oliva.
-- 5 gr de levadura en polvo.
-- 250 gr de agua.
-- 8 gr de sal.
+- 20 g de aceite de oliva virgen extra (y un poco más para engrasar)
+- 400 g de harina de fuerza (y un poco más para espolvorear)
+- 250 g de agua
+- 1 cucharadita de azúcar
+- 2 cucharaditas de levadura de panadería deshidratada (o 20 g de levadura prensada fresca)
+- 400 g de harina de fuerza
+- 20 g de aceite de oliva virgen extra
+- 1 cucharadita de sal
 
 Amasar:
 
@@ -191,7 +191,51 @@ Hornear:
 
 - Ponemos la masa 2 minutos en el suelo del horno ya caliente para que la masa no salga cruda.
 - Le ponemos el tomate y la volvemos a poner 2 minutos en el fondo.
-- Le ponemos el queso y el resto de ingredientes y la gratinamos arriba durante 5-10 minutos. Los ingredientes cuanto más secos y con menos grasa mejor.
+- Le ponemos el queso y el resto de ingredientes y la gratinamos arriba durante 5-10 minutos.
+
+Lecciones aprendidas:
+
+Los ingredientes cuanto más secos y con menos grasa mejor.
+
+## Pan sano (de Mogo)
+
+Ingredientes
+
+- 1 huevo
+- 2 cucharadas de harina de almendra
+- 1/2 cucharadita de levadura de royal
+- 1 cucharadita de aceite de oliva
+- Oregano
+- Sal
+
+Procedimiento:
+
+- Mezclamos todos los ingredientes
+- Vertemos la mezcla en un tupper de cristal
+- Tiene que tener una altura de 0'5 cm de altura
+- 1 min 30 seg al microhondas
+
+## Crumpets
+
+Ingredientes:
+
+- 150g (1 taza) harina
+- 200ml de agua caliente , tap water (200g) (Note 1)
+- 1/2 cucharada de sal
+- 1/2 cucharada de white sugar.
+- 1 cucharada de polvo para hornear o levadura química (baking powder).
+- 1 cucharada de levadura de panadería.
+- 1 cucharada de agua caliente.
+
+Pasos:
+
+- Cocinar durante 1'5 minutos a fuego medio.
+- Cocinar durante 1 minuto a fuego medio bajo.
+- Cocinar durante 2'5 a 4 minutos a fuego bajo.
+- Darle la vuelta.
+- Cocinar durante 20 a 30 segundos.
+
+Fuente: <https://www.recipetineats.com/crumpet-recipe/>
 
 ## Tortilla de patatas jugosa y con cebolla
 
@@ -312,6 +356,26 @@ Ingredientes:
 - Laurel.
 - Ajo.
 - Opcional: Media pastilla de caldo concentrado.
+
+## Carne guisada o estofado
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1aBgiznrjyQ?si=M6ZplZxUV2YwAWbq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+Ingredientes para 4 personas:
+
+- 1kg de carne de ternera
+- 2 patatas medianas
+- 2 cebollas
+- 3 dientes de ajo
+- 400g de tomate triturado
+- 1 vaso de vino tinto
+- 1 litro de caldo de carne
+- 1 cucharadita de tomillo seco
+- 1 cucharadita de romero seco
+- sal y pimienta
+- aceite
+
+## Masa de Pizza
 
 ## Otras cosas
 
